--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -11,8 +11,10 @@ body {
     padding: 25px;
 }
 
-img {
-    max-width: 100%; /* Afbeeldingen responsive maken */
-}
+
+
+
+
 
 /* Voeg jouw css hieraan toe */
+/* Afbeeldingen responsive maken */
