--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -15,12 +15,11 @@ body {
 
 
 
-.onderdeeltjes {
+.one {
     width:100px;
     height:20px;
     margin:1px;
     display:block;
-    background-color:#90B531;
     font-size:8pt;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     text-align:center;
@@ -28,9 +27,10 @@ body {
     border-left: 2px solid #D8E5B7;
     border-bottom: 2px solid #687D22;
     border-right: 2px solid #687D22;
+    border-color: pink
 } 
 
-a:hover.menubutton {
+a:hover.one {
     background-color:#D8E5B7;
 }
 
