--- a/pages/css/styleguide.css
+++ b/pages/css/styleguide.css
@@ -5,18 +5,18 @@
     height:20px;
     margin:1px;
     display:block;
-    background-color:#90B531;
+    background-color:#5B7793; 
     font-size:8pt;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     text-align:center;
-    border-top: 2px solid #D8E5B7;
-    border-left: 2px solid #D8E5B7;
-    border-bottom: 2px solid #687D22;
-    border-right: 2px solid #687D22;
+    border-top: 2px solid #5B7793;
+    border-left: 2px solid #5B7793;
+    border-bottom: 2px solid #5B7793; 
+    border-right: 2px solid #5B7793; 
 } 
 
 a:hover.menubutton {
-    background-color:#D8E5B7;
+    background-color:#5B7793; 
 }
 
 
