--- a/pages/css/styleguide.css
+++ b/pages/css/styleguide.css
@@ -5,14 +5,15 @@
     height:20px;
     margin:1px;
     display:block;
-    background-color:#5B7793; 
-    font-size:8pt;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    background-color: white; 
+    font: size 10pt;
+    color: black; 
+    font-family: 'Karla', sans-serif;
     text-align:center;
-    border-top: 2px solid #5B7793;
-    border-left: 2px solid #5B7793;
-    border-bottom: 2px solid #5B7793; 
-    border-right: 2px solid #5B7793; 
+    border-top: 2px solid #C676AE;
+    border-left: 2px solid #C676AE;
+    border-bottom: 2px solid #C676AE; 
+    border-right: 2px solid #C676AE; 
 } 
 
 a:hover.menubutton {
